--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "company",
+  "proxy": "http://localhost:5000",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -12,6 +13,7 @@
     "font-awesome": "^4.7.0",
     "ngrok": "^4.0.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
